fix(trash-service) Fix sort order (was inversed)